--- a/5. Tree models/notes.Rmd
+++ b/5. Tree models/notes.Rmd
@@ -26,13 +26,15 @@ credit.test = read.csv("http://homepages.uc.edu/~maifg/7040/credit.test.csv")
 
 ```
 
-We will use the 'rpart' library.
+We will use the 'rpart' library for model building and 'rpart.plot' for plotting.
 ```{r, eval=FALSE}
 install.packages('rpart')
+install.packages('rpart.plot') 
 ```
 
 ```{r,warning=FALSE}
 library(rpart)
+library(rpart.plot)
 ```
 
 
@@ -53,9 +55,10 @@ options(digits=7)
 
 ```{r}
 boston.rpart
-plot(boston.rpart)
-text(boston.rpart, pretty = TRUE)
+prp(boston.rpart,digits = 4, extra = 1)
 ```
+
+
 
 #### Prediction using regression tree
 
@@ -107,8 +110,7 @@ For more advanced controls, you should carefully read the help document for the 
 
 ```{r}
 credit.rpart
-plot(credit.rpart)
-text(credit.rpart, pretty = TRUE)
+prp(credit.rpart, extra = 1)
 ```
 
 #### Prediction using classification tree
@@ -132,7 +134,7 @@ cost <- function(r, pi){
   weight1 = 10
   weight0 = 1
   c1 = (r==1)&(pi==0) #logical vector - true if actual 1 but predict 0
-  c0 = (r==0)&(pi==1) #logical vecotr - true if actual 0 but predict 1
+  c0 = (r==0)&(pi==1) #logical vector - true if actual 0 but predict 1
   return(mean(weight1*c1+weight0*c0))
 }
 cost(credit.test$Y,credit.test.pred.tree1)
@@ -144,7 +146,7 @@ We can compare this model's out-of-sample performance with the logistic regressi
 #Fit logistic regression model
 credit.glm = glm(Y~.-id, data = credit.train, family=binomial)
 #Get binary prediction
-credit.test.pred.glm = as.numeric(predict(credit.glm, credit.test, type="response")>0.08)
+credit.test.pred.glm = as.numeric(predict(credit.glm, credit.test, type="response")>1/11)
 #Calculate cost using test set
 cost(credit.test$Y,credit.test.pred.glm)
 #Confusion matrix
@@ -158,15 +160,15 @@ ROC Curve and Cut-off Probability for Classification Tree
 --------
 Recall that ROC Curve gives you the trade-off between hit rate (1 - false positive) and false negative, and area under the curve (AUC) can be used as a measure of how good the binary classification model performs when you do not know the cost function.
 
-To get ROC curve, we first fit a tree without the loss matrix, then get the predicted probability of Y being 1. The additional cp parameter controls the complexity of tree. Here we change it from its default 0.01 to a smaller value to grow a more complex tree than just the root node (if you use the default the tree you get will tell you to clasify everything as 0). More discussion on this in the next section. 
+To get ROC curve, we get the predicted probability of Y being 1 from the fitted tree. The additional cp parameter controls the complexity of tree. Here we change it from its default 0.01 to a smaller value to grow a more complex tree than just the root node (if you use the default the tree you get will tell you to clasify everything as 0). More discussion on this in the next section. 
 
 ```{r}
-credit.rpart2 <- rpart(formula = Y ~ . -id, data = credit.train, method = "class", parms = list(loss=matrix(c(0,10,1,0), nrow = 2)))
+credit.rpart <- rpart(formula = Y ~ . -id, data = credit.train, method = "class", parms = list(loss=matrix(c(0,10,1,0), nrow = 2)))
 #Probability of getting 1
-credit.test.prob.rpart2 = predict(credit.rpart2,credit.test, type="prob")
+credit.test.prob.rpart = predict(credit.rpart,credit.test, type="prob")
 ```
 
-credit.test.prob.rpart2 has 2 columns, the first one is prob(Y) = 0 and the second prob(Y) = 1. We only need the second column because they add to 1 for binary classification.
+credit.test.prob.rpart has 2 columns, the first one is prob(Y) = 0 and the second prob(Y) = 1. We only need the second column because they add to 1 for binary classification.
 
 To get ROC curve we use 
 ```{r, eval=FALSE}
@@ -178,7 +180,7 @@ library(ROCR)
 ```
 
 ```{r}
-pred = prediction(credit.test.prob.rpart2[,2], credit.test$Y)
+pred = prediction(credit.test.prob.rpart[,2], credit.test$Y)
 perf = performance(pred, "tpr", "fpr")
 plot(perf, colorize=TRUE)
 ```
@@ -190,8 +192,8 @@ slot(performance(pred, "auc"), "y.values")[[1]]
 
 For a given cut-off probability, the 0/1 prediction result can be calculated similar to what you do in logistic regression
 ```{r}
-credit.test.pred.rpart2 = as.numeric(credit.test.prob.rpart2[,2] > 0.1)
-table(credit.test$Y, credit.test.pred.rpart2, dnn=c("Truth","Predicted"))
+credit.test.pred.rpart = as.numeric(credit.test.prob.rpart[,2] > 1/11)
+table(credit.test$Y, credit.test.pred.rpart, dnn=c("Truth","Predicted"))
 ```
 
 If you know the cost structure of mis-classification, there is usually no need to search for an optimal cut-off probability as we did in the logistic regression. You can refer to the last section on specifying a loss matrix, rpart will automatically generate decision rules with your cost structure taken into consideration.
@@ -222,14 +224,14 @@ boston.largetree <- rpart(formula = medv ~ ., data = boston.train, cp = 0.001)
 
 Try plot it yourself to see its structure.
 ```{r, eval=FALSE}
-plot(boston.largetree)
+prp(boston.largetree)
 ```
 
 The plotcp() function gives the relationship between 10-fold cross-validation error in the training set and size of tree.
 ```{r}
 plotcp(boston.largetree)
 ```
-You can observe from the above graph that the cross-validation error (x-val) does not always go down when the tree becomes more complex. The analogy is when you add more variables in a regression model, its ability to predict future observations not necessarily increases. In the Boston housing example, you may conclude that having a tree mode with more than 7-9 splits is not helptul.
+You can observe from the above graph that the cross-validation error (x-val) does not always go down when the tree becomes more complex. The analogy is when you add more variables in a regression model, its ability to predict future observations not necessarily increases. A good choice of cp for pruning is often the leftmost value for which the mean lies below the horizontal line. In the Boston housing example, you may conclude that having a tree mode with more than 10 splits is not helptul.
 
 To look at the error vs size of tree more carefully, you can look at the following table:
 ```{r}
@@ -249,7 +251,7 @@ xerror gives you the cross-validation (default is 10-fold) error. You can see th
 
 The way rpart() does it is that it uses some default control parameters to avoid fitting a large tree. The main reason for this approach is to save computation time. For example by default rpart set a cp = 0.1 and the minimum number of observations that must exist in a node to be 20. Use ?rpart.control to view these parameters. Sometimes we wish to change these paramters to see how more complex trees will perform, as we did above. If we have a larger than necessary tree, we can use prune() function and specify a new cp:
 ```{r}
-prune(boston.largetree, cp = 0.05)
+prune(boston.largetree, cp = 0.008)
 ```
 Some software/packages can automatically prune the tree.
 
