Updated some references on clustering.

--- a/7. Unsupervised learning (cluster analysis, association rules)/notes.rmd
+++ b/7. Unsupervised learning (cluster analysis, association rules)/notes.rmd
@@ -1,4 +1,4 @@
-Case 2 Lab
+Unsupervised Learning
 ========================================================
 ### Summary  
 This tutorial illustrates the implentations of clustering and association rule mining in (R).
@@ -93,6 +93,8 @@ plot(result[,c(1,3)], type="l", ylab = 'dunn index', xlab = 'number of clusters'
 The package `NbClust` provides 30 indexes for determining the optimal number of clusters in a data set.
 
 For more sophiscated methods, see for example [blog](http://blog.echen.me/2011/03/19/counting-clusters/), or [course notes](http://www.bx.psu.edu/old/courses/bx-fall04/How_Many_Clusters.pdf).
+
+[This article on Cross Validated](http://stats.stackexchange.com/a/133694/8622) provides a great illustration of the situations when k-means would fail.
 
 #### Hierarchical clustering
 
