--- a/8. Other topics/todo.txt
+++ b/8. Other topics/todo.txt
@@ -1,8 +1,7 @@
 TODO: 
-1. Text analysis.
-2. Big data (mapreduce)
-3. Improving R performance (apply, plyr, rcpp)
-
+- Ensemble modeling
+- Big data (mapreduce)
+- Improving R performance (apply, plyr, rcpp)
 
 
 Some resources to build a better tree model:  
@@ -19,10 +18,3 @@ fit <- randomForest(Y ~ .-id, family=binomial, data=credit.data) #full sample
 print(fit) # view results 
 importance(fit) # importance of each predictor
 ```
-
-Bagging?
-
-
-Need to scale y for nnet regression?
-Boston.nnet=nnet(formula = medv/max(medv) ~ ., data = Boston_train, size = 4, maxit = 500,linout=F)
-mean((predict(Boston.nnet, Boston_test)*max(Boston_test$medv) - Boston_test$medv)^2)
